Update GitHub and contact links in index.html
Modificación de los enlaces

--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
         </p>
 
         <div class="links">
-            <a href="https://github.com/TU_USUARIO" class="btn">GITHUB</a>
-            <a href="mailto:tu@email.com" class="btn btn-outline">CONTACTO</a>
+            <a href="https://github.com/DemianOrt" class="btn">GITHUB</a>
+            <a href="mailto:eortega1322@gmail.com" class="btn btn-outline">CONTACTO</a>
         </div>
     </div>
 
